[backend] fix(auth): improve code quality and test coverage (#5206)
Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>